add jvmArgs option